<resources>
    <string name="app_name">Gymmy Buddy</string>
    <string name="quote">¨Some people want it to happen, some wish it would happen, others make it happen.¨</string>
    <string name="app_overview">Customize fitness plans to YOUR goals</string>
    <string name="exercises">Exercises</string>
    <string name="saved_plans">Saved Plans</string>
    <string name="customize_plan">Customize Plan</string>
    <string name="login_prompt">LET\'S CRUSH IT TODAY!</string>
    <string name="signup_prompt"><u>Or sign up for an account</u></string>
    <string name="login_direct"><u>Back to login</u></string>
</resources>